force-app/main/default/objects/Insurance_Authorization__c/Insurance_Authorization__c.object-meta.xml
<CustomObject>
    <label>Insurance Authorization</label>
    <nameField>
        <label>Insurance Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>