force-app/main/default/objects/Insurance_Authorization__c/fields/Patient_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Patient_Insurance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient Insurance</label>
    <referenceTo>Patient_Insurance__c</referenceTo>
    <relationshipLabel>Insurance Authorizations</relationshipLabel>
    <relationshipName>Insurance_Authorizations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>